k8s/prod/core/auth/authentik/app/ingress-work.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN_WORK}
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  name: authentik-server-work
spec:
  ingressClassName: external-work
  rules:
    - host: &host auth.${SECRET_DOMAIN_WORK}
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
